apex/grammar.js
    parser_output: ($) => repeat($.declaration),

    // Expressions

    dml_expression: ($) =>
      prec.right(
        choice(
          seq($.dml_type, $.primary_expression),
          seq(
            alias(ci("upsert"), $.dml_type),
            $.primary_expression,
            optional($._unannotated_type)
          ),
          seq(
            alias(ci("merge"), $.dml_type),
            $.primary_expression,
            $.identifier // TODO: should be primary_expression
          )
        )
      ),
    dml_type: ($) =>
      choice(ci("insert"), ci("update"), ci("delete"), ci("undelete")),
    cast_expression: ($) =>
      prec(
        PREC.CAST,
        seq("(", field("type", $._type), ")", field("value", $.expression))
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.field_access, $.array_access)),
          field(
            "operator",
            alias(
              choice(
                "=",
                "+=",
                "-=",
                "*=",
                "/=",
                "&=",
                "|=",
                "^=",
                "%=",
                "<<=",
                ">>=",
                ">>>="
              ),
              $.assignment_operator
            )
          ),
          field("right", $.expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          [">", PREC.REL],
          ["<", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          ["==", PREC.EQUALITY],
          ["===", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["!==", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          [">>>", PREC.SHIFT],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression)
            )
          )
        )
      ),

    instanceof_expression: ($) =>
      prec(
        PREC.REL,
        seq(
          field("left", $.expression),
          ci("instanceof"),
          field("right", $._type)
        )
      ),

    update_expression: ($) =>
      prec.left(
        PREC.UNARY,
        choice(
          // Post (in|de)crement is evaluated before pre (in|de)crement
          seq($.expression, "++"),
          seq($.expression, "--"),
          seq("++", $.expression),
          seq("--", $.expression)
        )
      ),

    array_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type", $._simple_type),
          choice(
            seq(
              field("dimensions", repeat1($.dimensions_expr)),
              field("dimensions", optional($.dimensions))
            ),
            seq(
              field("dimensions", $.dimensions),
              field("value", $.array_initializer)
            ),
            seq(field("value", $.array_initializer))
          )
        )
      ),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    object_creation_expression: ($) =>
      $._unqualified_object_creation_expression,

    _unqualified_object_creation_expression: ($) =>
      prec.right(
        seq(
          ci("new"),
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          field("arguments", $.argument_list),
          optional($.class_body)
        )
      ),

    _property_navigation: ($) => seq(optional("?"), "."),

    method_invocation: ($) =>
      seq(
        choice(
          field("name", $.identifier),
          seq(
            field("object", choice($.primary_expression, $.super)),
            $._property_navigation,
            optional(seq($.super, $._property_navigation)),
            field("type_arguments", optional($.type_arguments)),
            field("name", $.identifier)
          )
        ),
        field("arguments", $.argument_list)
      ),

    argument_list: ($) => seq("(", commaJoined($.expression), ")"),

    type_arguments: ($) => seq("<", commaJoined($._type), ">"),

    block: ($) => seq("{", repeat($.statement), "}"),

    expression_statement: ($) => seq($.expression, ";"),

    do_statement: ($) =>
      seq(
        ci("do"),
        field("body", $.statement),
        ci("while"),
        field("condition", $.parenthesized_expression),
        ";"
      ),

    try_statement: ($) =>
      seq(
        ci("try"),
        field("body", $.block),
        choice(
          repeat1($.catch_clause),
          seq(repeat($.catch_clause), $.finally_clause)
        )
      ),

    catch_clause: ($) =>
      seq(
        ci("catch"),
        "(",
        $.catch_formal_parameter,
        ")",
        field("body", $.block)
      ),

    catch_formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        $._unannotated_type,
        $._variable_declarator_id
      ),

    finally_clause: ($) => seq(ci("finally"), $.block),

    if_statement: ($) =>
      prec.right(
        seq(
          ci("if"),
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(seq(ci("else"), field("alternative", $.statement)))
        )
      ),

    while_statement: ($) =>
      seq(
        ci("while"),
        field("condition", $.parenthesized_expression),
        field("body", $.statement)
      ),

    for_statement: ($) =>
      seq(
        ci("for"),
        "(",
        choice(
          field("init", $.local_variable_declaration),
          seq(commaJoined(field("init", $.expression)), ";")
        ),
        field("condition", optional($.expression)),
        ";",
        commaJoined(field("update", $.expression)),
        ")",
        field("body", $.statement)
      ),

    enhanced_for_statement: ($) =>
      seq(
        ci("for"),
        "(",
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id,
        ":",
        field("value", $.expression),
        ")",
        field("body", $.statement)
      ),

    run_as_statement: ($) =>
      // TODO: there might be a better generic way to express this
      seq(
        ci("System.runAs"),
        field("user", $.parenthesized_expression),
        $.block
      ),

    enum_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("enum"),
        field("name", $.identifier),
        field("interfaces", optional($.interfaces)),
        field("body", $.enum_body)
      ),

    enum_body: ($) => seq("{", commaJoined($.enum_constant), "}"),

    enum_constant: ($) =>
      seq(optional($.modifiers), field("name", $.identifier)),

    class_declaration: ($) =>
      seq(
        optional($.modifiers),
        ci("class"),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(field("superclass", $.superclass)),
        optional(field("interfaces", $.interfaces)),
        field("body", $.class_body)
      ),

    modifiers: ($) =>
      repeat1(
        choice(
          $.annotation,
          ci("global"),
          ci("public"),
          ci("testMethod"),
          ci("protected"),
          ci("override"),
          ci("private"),
          ci("virtual"),
          ci("abstract"),
          ci("static"),
          ci("final"),
          ci("transient"),
          seq(ci("with"), ci("sharing")), // TODO: class only
          seq(ci("without"), ci("sharing")),
          seq(ci("inherited"), ci("sharing"))
        )
      ),

    superclass: ($) => seq(ci("extends"), $._type),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.method_declaration,
        $.class_declaration,
        $.interface_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";"
      ),

    constructor_declaration: ($) =>
      seq(
        optional($.modifiers),
        $._constructor_declarator,
        field("body", $.constructor_body)
      ),

    _constructor_declarator: ($) =>
      seq(
        field("type_parameters", optional($.type_parameters)),
        field("name", $.identifier),
        field("parameters", $.formal_parameters)
      ),

    constructor_body: ($) =>
      seq(
        "{",
        optional($.explicit_constructor_invocation),
        repeat($.statement),
        "}"
      ),

    explicit_constructor_invocation: ($) =>
      seq(
        choice(
          seq(
            field("type_arguments", optional($.type_arguments)),
            field("constructor", choice($.this, $.super))
          ),
          seq(
            field("object", choice($.primary_expression)),
            ".",
            field("type_arguments", optional($.type_arguments)),
            field("constructor", $.super)
          )
        ),
        field("arguments", $.argument_list),
        ";"
      ),

    field_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        choice($.accessor_list, ";")
      ),

    _variable_declarator_list: ($) =>
      commaJoined1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      seq(
        $._variable_declarator_id,
        optional(
          seq(
            alias("=", $.assignment_operator),
            field("value", $._variable_initializer)
          )
        )
      ),

    _variable_declarator_id: ($) =>
      seq(
        field("name", $.identifier),
        field("dimensions", optional($.dimensions))
      ),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    array_initializer: ($) =>
      seq("{", commaJoined($._variable_initializer), "}"),

    _type: ($) => choice($._unannotated_type, $.annotated_type),

    _unannotated_type: ($) => choice($._simple_type, $.array_type),

    _simple_type: ($) =>
      choice(
        $.void_type,
        $.integral_type,
        $.floating_point_type,
        $.boolean_type,
        alias($.identifier, $.type_identifier),
        $.scoped_type_identifier,
        $.generic_type
      ),

    scoped_type_identifier: ($) =>
      seq(
        choice(
          alias($.identifier, $.type_identifier),
          $.scoped_type_identifier,
          $.generic_type
        ),
        ".",
        repeat($.annotation),
        alias($.identifier, $.type_identifier)
      ),

    generic_type: ($) =>
      prec.dynamic(
        PREC.GENERIC,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier
          ),
          $.type_arguments
        )
      ),

    formal_parameters: ($) => seq("(", commaJoined($.formal_parameter), ")"),

    formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id
      ),

    local_variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_list,
        ";"
      ),

    this: ($) => ci("this"),

    super: ($) => ci("super"),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    line_comment: ($) => token(prec(PREC.COMMENT, seq("//", /[^\n]*/))),

    identifier: ($) => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // Literals

    int: ($) => token(seq(DIGITS, optional(choice("l", "L")))),

    string_literal: ($) => /'(\\[nNrRtTbBfF"'_%\\]|[^\\'])*'/,
  },
});
